fix duplicate play providers & cursor overflow on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -189,6 +189,14 @@ body {
   font-size: $default-font-size;
 }
 
+#playhtml-cursor-container {
+  position: fixed;
+  inset: 0;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 9999;
+}
+
 #background {
   background-color: $color-site-background;
   background-image: url(/tiled-texture.png);
